Shift + Click on the big button or press O key to open a network URL; fixes #23

--- a/v2/data/player/index.css
+++ b/v2/data/player/index.css
@@ -31,10 +31,12 @@ button {
   z-index: 2147483647;
   color: #fff;
   font-size: 160%;
+  line-height: 160%;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 4px;
   padding: 5px 20px;
   white-space: pre;
+
 }
 #toast:empty {
   display: none;
